2004-10-20 Alain Magloire
	Use the new ICDIDebugger interface

	* mi/org/eclipse/cdt/debug/mi/core/MIInferior.java
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java
	* mi/org/eclipse/cdt/debug/mi/core/SessionProcess.java
	* src/org/eclipse/cdt/debug/mi/core/CygwinGDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBServerDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java
	* src/org/eclipse/cdt/debug/mi/core/MIProcessAdapter.java
	* plugin.xml

2004-10-20 David Inglis
	Fixed terminated delay for corefile
	* mi/org/eclipse/cdt/debug/mi/core/MIInferior.java
	
2004-10-19 Alain Magloire
	Fix Core Launching
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* mi/org/eclipse/cdt/debug/mi/core/CoreProcess.java
	* mi/org/eclipse/cdt/debug/mi/core/MIInferior.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2004-10-18 Alain Magloire
	Adjust to changes in CDI
	* src/org/eclipse/cdt/debug/mi/core/cdi/model/RuntimeOptions.java
	* src/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* src/org/eclipse/cdt/debug/mi/core/cdi/Session.java

2004-10-17 Alain Magloire
	Remove deprecated method in CDI adjust the implementation.

2004-10-15 Alain Magloire

	The way we do breakpoints is changing. gdb does not have
	-break-thread-id command that would allow to change if a breakpoint
	is associated with a particular thread(the same way as in
	-break-condition, and -break-after). So to do thread breakpoint
	we associate 1 Eclipse breakpoint with n GDB breakpoints:
	1:n

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Condition.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Breakpoint.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Exceptionpoint.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java