@@ -1,3 +1,7 @@
+2004-10-24 Alain Magloire
+	Changes in ICDITarget.evaluateExpressionToString()
+	* org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
+
 2004-10-20 Alain Magloire
 	Use the new ICDIDebugger interface
 
